fixed ediotr and swimming and camera

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
     <script src="scenes/sceneEditor.js"></script>
     <script src="scenes/sceneObjectPicker.js"></script>
+    <script src="scenes/sceneTexturePicker.js"></script>
     <script src="scenes/sceneGame.js"></script>
     <script src="scenes/sceneMainMenu.js"></script>
     <script src="scenes/sceneLoading.js"></script>
