basic multiplayer finished i think

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     <main>
     </main>
     
-    <script src="nde1.1.5.js"></script>
+    <script src="nde2.3.1.js"></script>
 
     <script src="assets/textures.js"></script>
 
-    <script src="object.js"></script>
+    <script src="constants.js"></script>
 
     <script src="scenes/sceneEditor.js"></script>
     <script src="scenes/sceneObjectPicker.js"></script>
@@ -24,7 +24,14 @@
     <script src="scenes/sceneLoading.js"></script>
     <script src="scenes/sceneLobbyPicker.js"></script>
 
-    <script src="entity.js"></script>
+    <script src="entities/EntityBase.js"></script>
+    <script src="entities/EntityPlayer.js"></script>
+
+    <script src="objects/ObjectBase.js"></script>
+    <script src="objects/ObjectText.js"></script>
+    <script src="objects/ObjectTexture.js"></script>
+    <script src="objects/ObjectWater.js"></script>
+
     <script src="world.js"></script>
     <script src="index.js"></script>
   </body>
