started working on the generation, fixed the editor, fixed server side not having enough scope, and a lot more like optimizing lighting

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     <script src="scenes/sceneMainMenu.js"></script>
     <script src="scenes/sceneLoading.js"></script>
     <script src="scenes/sceneLobbyPicker.js"></script>
+    <script src="scenes/sceneSettings.js"></script>
+    <script src="scenes/sceneRoomPicker.js"></script>
 
     <script src="entities/EntityBase.js"></script>
     <script src="entities/EntityPlayer.js"></script>
@@ -31,6 +33,11 @@
     <script src="objects/ObjectText.js"></script>
     <script src="objects/ObjectTexture.js"></script>
     <script src="objects/ObjectWater.js"></script>
+    
+    <script src="Room.js"></script>
+
+    <script src="light.js"></script>
+
 
     <script src="world.js"></script>
     <script src="index.js"></script>
