world generation added

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <script src="objects/ObjectText.js"></script>
     <script src="objects/ObjectTexture.js"></script>
     <script src="objects/ObjectWater.js"></script>
+    <script src="objects/ObjectTextureLight.js"></script>
     
     <script src="Room.js"></script>
 
