--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
     <script src="entities/EntityBase.js"></script>
     <script src="entities/EntityPlayer.js"></script>
+    <script src="entities/EntityItem.js"></script>
 
     <script src="objects/ObjectBase.js"></script>
     <script src="objects/ObjectText.js"></script>
