fixed slots transparency, moved prefabs, added am6 supremacy

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <script src="nde2.3.1.js"></script>
 
     <script src="assets/textures.js"></script>
+    <script src="assets/prefabs.js"></script>
 
     <script src="constants.js"></script>
 
@@ -35,6 +36,7 @@
     <script src="objects/ObjectTexture.js"></script>
     <script src="objects/ObjectWater.js"></script>
     <script src="objects/ObjectTextureLight.js"></script>
+
     
     <script src="Room.js"></script>
 
