now textures are read automatically

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,7 @@
     
     <script src="nde2.3.1.js"></script>
 
-    <script src="assets/textures.js"></script>
-    <script src="assets/prefabs.js"></script>
+    <script src="prefabs.js"></script>
 
     <script src="constants.js"></script>
 
