restructured, player data is saved in a single lobby, more

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
     <script src="light.js"></script>
 
 
+    <script src="Material.js"></script>
     <script src="world.js"></script>
     <script src="index.js"></script>
   </body>
