players can be colored now and a customization screen

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <script src="scenes/sceneLoading.js"></script>
     <script src="scenes/sceneLobbyPicker.js"></script>
     <script src="scenes/sceneSettings.js"></script>
+    <script src="scenes/sceneCharacter.js"></script>
     <script src="scenes/sceneRoomPicker.js"></script>
 
     <script src="entities/EntityBase.js"></script>
