added lobby creation and findation

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     <script src="scenes/sceneMainMenu.js"></script>
     <script src="scenes/sceneLoading.js"></script>
     <script src="scenes/sceneLobbyPicker.js"></script>
+    <script src="scenes/sceneLobbyCreator.js"></script>
+    <script src="scenes/sceneLobbyFinder.js"></script>
     <script src="scenes/sceneSettings.js"></script>
     <script src="scenes/sceneCharacter.js"></script>
     <script src="scenes/sceneRoomPicker.js"></script>
